DFHack Future

DFHack 0.40.14-r1
    Internals:
        - The DFHack console can now be disabled by setting the DFHACK_DISABLE_CONSOLE
            environment variable: "DFHACK_DISABLE_CONSOLE=1 ./dfhack"
    Fixes:
        - Stopped duplicate load/unload events when unloading a world
        - Stopped "-e" from being echoed when DFHack quits on Linux
        - automelt now uses a faster method to locate items
        - autotrade: "Mark all" no longer double-marks bin contents
        - drainaquifer.rb: replaced with a faster less buggy drain-aquifer.lua
        - embark-tools no longer conflicts with keys on the notes screen
        - fastdwarf: Fixed problems with combat/attacks
        - forum-dwarves should work now
        - manipulator now uses a stable sort, allowing sorting by multiple categories
        - rendermax updated to work with 0.40
    New plugins:
        - trackstop: Shows track stop friction and dump direction in its 'q' menu
    New tweaks:
        - farm-plot-select: Adds "Select all" and "Deselect all" options to farm plot menus
        - import-priority-category: Allows changing the priority of all goods in a
            category when discussing an import agreement with the liaison
        - manager-quantity: Removes the limit of 30 jobs per manager order
        - civ-view-agreement: Fixes overlapping text on the "view agreement" screen
        - nestbox-color: Fixes the color of built nestboxes

DFHack 0.40.13-r1
    Internals:
        - unified spatter structs
        - added ruby df.print_color(color, string) method for dfhack console
    Fixes:
        - no more -e after terminating
        - fixed superdwarf

DFHack 0.40.12-r1
    Fixes:
        - possible crash fixed for hack-wish
        - updated search to not conflict with BUILDJOB_SUSPEND
        - workflow: job_material_category -> dfhack_material_category

    New plugins: